5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1880_1642.log
== TEST (2019-07-03 15:17:42) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if (n[i]==5):
		i = i+1
for i in range(size(n)):
	
		
	
	
-- ERROR:
File "XXXX", line 14
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:40) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
		v[k]=n
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
File "XXXX", line 7
    if(n[i]=n/5):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:38:09) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
		v[k]=n[i]
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
File "XXXX", line 7
    if(n[i]=n/5):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:39:49) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
print(c)
k=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
		k = k+1
		v[k]=n[i]
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
File "XXXX", line 7
    if(n[i]=n/5):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:36) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
File "XXXX", line 7
    if(n[i]=n/5):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:47) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]==n/5):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]=n/5):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
File "XXXX", line 11
    if(n[i]=n/5):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:52) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]==n/5):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]==n/5):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:33) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:57) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:57) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]/5==0):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:19) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))
v = zeros(n, dtype=int)
i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:45:19) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=n[i]
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:19) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:42) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:46:46) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- EXECUTION TIME:
1.01567
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[11  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[7 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[7 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:48) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:47:00) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- EXECUTION TIME:
1.13298
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[11  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[7 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[7 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:47:05) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:47:10) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:47:42) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
		v[k]=i
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:48:34) 
-- CODE:
from numpy import*
n = array(eval(input("turmas: ")))

i=0
c=0
for i in range(size(n)):
	if(n[i]%5==0):
		c=c+1
k=0
v = zeros(c, dtype=int)
for i in range(size(n)):
	if(n[i]%5==0):
		
		v[k]=i
		k = k+1
print(size(v))
print(v)
		
		
		
	

	
	
	
	
	
	
		
	
	
-- EXECUTION TIME:
1.23372
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
